# agentic-event-store

./: README.md  pyproject.toml
datagen/: minimal_generate.py
docs/: INTERIM_SUBMISSION_REPORT.tex
scripts/: export_audit_report.py  run_compliance_agent.py  run_credit_agent.py  run_doc_agent.py  run_fraud_agent.py  run_human_review.py  run_orchestrator_agent.py  run_pipeline.py  run_projections_once.py  show_application.py
src/: schema.sql
src/agents/: base_agent.py  compliance_agent.py  credit_analysis_agent.py  decision_orchestrator_agent.py  document_processing_agent.py  fraud_detection_agent.py
src/aggregates/: audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/domain/: causal.py
src/integrity/: audit_chain.py
src/mcp/: resources.py  server.py  tools.py
src/models/: events.py
src/projections/: application_summary.py  compliance_audit.py
src/registry/: client.py  models.py  schema.sql
tests/: conftest.py  test_agent_session_events.py  test_audit_report_export.py  test_compliance_agent_stub.py  test_concurrency.py  test_credit_analysis_agent_stub.py  test_decision_orchestrator_agent_stub.py  test_document_processing_agent_stub.py  test_fraud_detection_agent_stub.py  test_human_review_step.py  test_integrity_tamper.py  test_mcp_lifecycle.py  test_pipeline_via_mcp.py  test_registry_client.py
