[project]
name = "agentic-event-store"
version = "0.1.0"
description = "TRP1 Week 5: The Ledger (agentic event store & audit infrastructure)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "psycopg[binary,pool]>=3.2.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

